style/style.css
/* ... */
a {
  color: #d7e4da;
}

a:hover, a:focus {
  color: #d7e4da;
}

@-webkit-keyframes GradientWave {
  0% {
    background-position: 0% 50%;
  }
  100% {
    background-position: 100% 50%;
  }
}

@keyframes GradientWave {
  0% {
    background-position: 0% 50%;
  }
  100% {
    background-position: 100% 50%;
  }
}

button {
  background: #030504;
  background-size: 400%;
  border: solid 3px #a18a54;
  padding: 5px 20px;
  display: block;
}

button:hover {
  cursor: pointer;
  background: linear-gradient(141deg, #030504 0%, #1c3a3e 70%, #674e47 90%);
  background-size: 250%;
  background-position: 100%;
  -webkit-animation: GradientWave 0.2s ease;
          animation: GradientWave 0.2s ease;
}

.select-wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.select-wrapper select {
  width: 100%;
  padding: 5px 10px;
  border: solid 2px #a18a54;
  background: #030504;
  font-size: 20px;
}

.select-wrapper::after {
  content: '';
  display: block;
  position: relative;
  top: 14px;
  right: 30px;
  width: 10px;
  height: 10px;
  border: solid 2px #a18a54;
  border-left: none;
  border-top: none;
  -webkit-transform: rotate(45deg);
          transform: rotate(45deg);
}

@-webkit-keyframes spinning {
  from {
    -webkit-transform: rotate(0deg);
            transform: rotate(0deg);
  }
  to {
    -webkit-transform: rotate(360deg);
            transform: rotate(360deg);
  }
}

@keyframes spinning {
  from {
    -webkit-transform: rotate(0deg);
            transform: rotate(0deg);
  }
  to {
    -webkit-transform: rotate(360deg);
            transform: rotate(360deg);
  }
}

#spinningVinylWrapper {
  position: absolute;
  overflow-x: visible;
  overflow-y: hidden;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  right: 0;
  height: 100%;
  z-index: -1;
}

#spinningVinylWrapper .spinning {
  -webkit-animation: spinning 30s linear infinite;
          animation: spinning 30s linear infinite;
}

#spinningVinylWrapper .spinning-vinyl {
  position: relative;
  top: 40%;
  height: 180%;
  opacity: 0.8;
  -webkit-filter: grayscale(20%);
          filter: grayscale(20%);
}

.checkbox-wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  position: relative;
  cursor: pointer;
}

.checkbox-wrapper .checkbox-slot {
  position: relative;
  display: block;
  top: 0;
  left: 0;
  height: 25px;
  width: 25px;
  background: #030504;
  border: solid 2px #a18a54;
  margin-right: 10px;
}

.checkbox-wrapper.isRadio .checkbox-slot {
  border-radius: 50%;
}

.checkbox-wrapper.checked .checkbox-slot {
  background: #a18a54;
}

.checkbox-wrapper:hover .checkbox-slot {
  background: linear-gradient(141deg, #1c3a3e 10%, #674e47 90%);
}

.checkbox-wrapper.checked:hover .checkbox-slot {
  background: #a18a54;
}

.checkbox-wrapper label {
  cursor: pointer;
}

.search-wrapper {
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

.search-wrapper #searchBar {
  width: 300px;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  height: 100%;
  font-size: 20px;
  background: -webkit-gradient(linear, left top, left bottom, color-stop(10%, #030504), color-stop(90%, #1c3a3e));
  background: linear-gradient(#030504 10%, #1c3a3e 90%);
  border: solid 3px #a18a54;
  padding: 5px 10px;
  color: #a18a54;
}

.search-wrapper #resetSearch {
  position: absolute;
  top: 10px;
  right: 5px;
  cursor: pointer;
  width: 35px;
  height: 35px;
  -ms-flex-item-align: end;
      -ms-grid-row-align: end;
      align-self: end;
}

.search-wrapper #searchResult {
  max-height: 300px;
  width: 300px;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  position: absolute;
  top: 50px;
  z-index: 5;
  background: #030504;
  overflow-x: hidden;
  overflow-y: auto;
  border: solid 3px #a18a54;
  font-size: 20px;
}

.search-wrapper #searchResult .search-result-item {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.search-wrapper #searchResult .search-result-item:hover {
  cursor: pointer;
  background: #a18a54;
  color: #030504;
}

.search-wrapper #searchResult .search-result-item .album-cover {
  width: 30px;
  height: 30px;
  margin-right: 5px;
}

.search-wrapper #searchResult .search-result-item .album-title {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow-x: hidden;
}

header {
  height: 15vh;
  min-height: 90px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  position: fixed;
  z-index: 1;
  top: 0;
  width: 100vw;
  background: linear-gradient(141deg, #1c3a3e 10%, #674e47 90%);
  border-bottom: solid 6px #a18a54;
  padding: 0 20px;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

header #snackHeader {
  margin: 10px 0 -10px 0;
  cursor: pointer;
}

header #menu {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  top: 3vh;
}

header #menu button {
  width: auto;
  border-right-width: 0;
}

header #menu button.button-active {
  color: #030504;
  background: #a18a54;
  pointer-events: none;
}
/* ... */

